--- a/backoffice/.htaccess
+++ b/backoffice/.htaccess
@@ -1,4 +1,5 @@
 Options All -Indexes
 
 RewriteEngine On
-RewriteRule ^([-a-zA-Z0-9/]+)$ index.php?pagina=$1
+RewriteRule ^([-a-zA-Z0-9]+)$ index.php?pagina=$1 [L]
+RewriteRule ^([-a-zA-Z0-9]+)/([0-9]+)$ index.php?pagina=$1&id=$2 [L]
